[package]
name = "portal-bridge"
version = "0.1.0"
edition = "2021"
description = "Permissionless interchain layer for autonomous agents"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
